// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Message /> should render an "in" message 1`] = `
<div
  className="message"
>
  <div
    className="message-bubble message-in"
  >
    <p>
      hello
    </p>
  </div>
</div>
`;

exports[`<Message /> should render an "out" message 1`] = `
<div
  className="message"
>
  <div
    className="message-bubble message-out"
  >
    <p>
      hello
    </p>
  </div>
</div>
`;
